force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>