force-app/main/default/objects/Booking__c/fields/Acct__c.field-meta.xml
<CustomField>
    <fullName>Acct__c</fullName>
    <formula>Opportunity_Name__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>