force-app/main/default/objects/Booking__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>text(Opportunity_Name__r.Account.Primary_Asset_Class__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset</label>
    <type>Text</type>
</CustomField>