force-app/main/default/objects/Booking__c/fields/Booking_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Case Safe ID</label>
    <type>Text</type>
</CustomField>