force-app/main/default/objects/Booking__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>CASE( Opportunity_Name__r.Product__c ,

&quot;Forum&quot;,  Opportunity_Name__r.Forum_Duration_number__c ,
&quot;Intelligence&quot;,   Opportunity_Name__r.Intelligence_Duration_Number__c  ,
 Opportunity_Name__r.Package_Duration__c 


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>