force-app/main/default/objects/Booking__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>Opportunity_Name__r.Invoice_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>