force-app/main/default/objects/Booking__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <formula>text( Opportunity_Name__r.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>