force-app/main/default/objects/Booking__c/fields/Oppty__c.field-meta.xml
<CustomField>
    <fullName>Oppty__c</fullName>
    <formula>Opportunity_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>