force-app/main/default/objects/Booking__c/fields/Oppty_Stage__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Stage__c</fullName>
    <formula>text(Opportunity_Name__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Stage</label>
    <type>Text</type>
</CustomField>