force-app/main/default/objects/Booking__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <formula>Opportunity_Name__r.Account.Intranet_Package_Owner_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intranet Package Owner ID</label>
    <type>Text</type>
</CustomField>