force-app/main/default/objects/Booking__c/fields/Package_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Package_End_Date__c</fullName>
    <formula>Opportunity_Name__r.Package_expiry_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package End Date</label>
    <type>Date</type>
</CustomField>