force-app/main/default/objects/Booking__c/fields/Package_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Package_Start_Date__c</fullName>
    <formula>Opportunity_Name__r.Package_start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Start Date</label>
    <type>Date</type>
</CustomField>