force-app/main/default/objects/Booking__c/fields/PAYG__c.field-meta.xml
<CustomField>
    <fullName>PAYG__c</fullName>
    <formula>Opportunity_Name__r.PAYG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAYG</label>
    <type>Checkbox</type>
</CustomField>