force-app/main/default/objects/Booking__c/fields/Region_Amount__c.field-meta.xml
<CustomField>
    <fullName>Region_Amount__c</fullName>
    <formula>Oppty__c *  Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>