force-app/main/default/objects/Booking__c/fields/Region_hrs__c.field-meta.xml
<CustomField>
    <fullName>Region_hrs__c</fullName>
    <formula>Opportunity_Name__r.Hours__c *  Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>