force-app/main/default/objects/Booking__c/fields/Regional_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Regional_Weighted__c</fullName>
    <formula>Opportunity_Name__r.Weighted_Forecast__c *  Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>