force-app/main/default/objects/Booking__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <label>Split %</label>
    <precision>11</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>