force-app/main/default/objects/Booking__c/fields/Weighted__c.field-meta.xml
<CustomField>
    <fullName>Weighted__c</fullName>
    <formula>Opportunity_Name__r.Weighted_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>