force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Recognition_Region__c</columns>
    <columns>Oppty_Stage__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Oppty_Currency__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Split__c</columns>
    <columns>Oppty__c</columns>
    <columns>Hours__c</columns>
    <columns>Region_hrs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>